[package]
name = "rsmlc"
version = "0.1.0"
edition = "2024"

[lib]
name = "rsmlc"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
quick-xml = {version = "0.38.3", features = ["serialize"] }
rand = "0.9.2"
serde = { version = "1.0.221", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"

[[example]]
name = "length_demo"
path = "examples/length_demo.rs"

[[example]]
name = "geom_demo"
path = "examples/geom_demo.rs"

[[example]]
name = "package_example"
path = "examples/package_example.rs"

[[bin]]
name = "rsmlc"
path = "src/main.rs"
